# metar-cli

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  install.sh  uninstall.sh
.github/workflows/: build_release.yml
include/: ArgParser.h  METARParser.h  Utils.h  WebHandler.h
src/: ArgParser.cpp  METARParser.cpp  Utils.cpp  WebHandler.cpp  main.cpp
